fixed tabs spacing for ipad width. add media query for 768-820px

--- a/scss/custom/home.scss
+++ b/scss/custom/home.scss
@@ -48,6 +48,12 @@ $include-html-classes: false;
 	p.title a:hover{
 		text-decoration: none;
 	}
+
+	dl.tabs dd a{
+		@media all and (min-width: 768px) and (max-width: 820px){
+			padding: rem-calc(10);
+		}
+	}
 }
 
 #searcheverything{
@@ -68,18 +74,27 @@ $include-html-classes: false;
 	height: 3.5em;
 	margin-bottom: 0px;
 
+
 	@media #{$small-only}{
 		@include grid-column(12);
 		margin-bottom: rem-calc(10);
+	}
+
+	@media all and (min-width: 768px) and (max-width: 820px){
+		@include grid-column(9);
 	}
 }
 #all-submit{
 	@include grid-column(2, false, false, false, false, false, false, right);
 	margin: 0px;
-	height: 4.25em;
+	height: 4.3em;
 
 	@media #{$small-only}{
 		@include grid-column(12);
+	}
+
+	@media all and (min-width: 768px) and (max-width: 820px){
+		@include grid-column(3);
 	}
 }
 
@@ -99,14 +114,24 @@ $include-html-classes: false;
 	@media #{$small-only}{
 		@include grid-column(12);
 	}
+
+	@media all and (min-width: 768px) and (max-width: 820px){
+		@include grid-column(9);
+		margin-bottom: rem-calc(10);
+	}
 }
 #article-submit{
 	@include grid-column(2, false, false, false, false, false, false, right);
 	margin: 0px 0px rem-calc(5);
-	height: 4.25em;
+	height: 4.3em;
 
 	@media #{$small-only}{
 		@include grid-column(12);
+	}
+
+	@media all and (min-width: 768px) and (max-width: 820px){
+		@include grid-column(3);
+		margin-bottom: rem-calc(10);
 	}
 }
 .search-example{
@@ -144,14 +169,22 @@ $include-html-classes: false;
 	@media #{$small-only}{
 		@include grid-column(12);
 	}
+
+	@media all and (min-width: 768px) and (max-width: 820px){
+		@include grid-column(9);
+	}
 }
 #searchbookssubmit{
 	@include grid-column(2);
-	height: 4.25em;
+	height: 4.3em;
 	margin-bottom: emCalc(5);
 
 	@media #{$small-only}{
 		@include grid-column(12);
+	}
+
+	@media all and (min-width: 768px) and (max-width: 820px){
+		@include grid-column(3);
 	}
 }
 #books-more-options-drop{
@@ -168,14 +201,22 @@ $include-html-classes: false;
 	@media #{$small-only}{
 		@include grid-column(12);
 	}
+
+	@media all and (min-width: 768px) and (max-width: 820px){
+		@include grid-column(9);
+	}
 }
 #web-submit{
 	@include grid-column(2);
-	height: 4.25em;
+	height: 4.3em;
 	margin-bottom: rem-calc(10);
 
 	@media #{$small-only}{
 		@include grid-column(12);
+	}
+
+	@media all and (min-width: 768px) and (max-width: 820px){
+		@include grid-column(3);
 	}
 }
 
@@ -203,63 +244,71 @@ $include-html-classes: false;
 
 /*begin quicklinks*/
 #home-quicklinks{
-	@include inline-list;
-	list-style-type: none;
-	margin: 0px;
+	@include grid-column(12);
+	padding: 0px;
 
-	@media #{$small-only}{
-		margin-bottom: rem-calc(30);
-	}
-
-	li{
+	ul#quicklinks{
+		list-style-type: none;
+		margin: 0px;
 
 		@media #{$small-only}{
-			margin-left: 0px;
-			width: 100%;
+			margin-bottom: rem-calc(30);
 		}
 
-		h2{
-			font-size: 1em;
-			font-weight: bold;
-			margin-bottom: 0px;
+		> li{
+			@include grid-column(4);
+			padding-left: 0px;
+		}
+
+		li{
 
 			@media #{$small-only}{
-				font-size: 2em;
-				font-weight: normal;
+				margin-left: 0px;
+				width: 100%;
 			}
-		}
 
-		ul{
-			@include side-nav;
-
-			li{
-				@media #{$small-only}{
-					@include grid-column(6);
-					padding: 0px;
-				}
+			h2{
+				font-size: 1em;
+				font-weight: bold;
 				margin-bottom: 0px;
 
-				a{
+				@media #{$small-only}{
+					font-size: 2em;
+					font-weight: normal;
+				}
+			}
+
+			ul{
+				@include side-nav;
+
+				li{
 					@media #{$small-only}{
-						// @include button(rem-calc(10));
-						color: #FFF;
+						@include grid-column(6);
+						padding: 0px;
+					}
+					margin-bottom: 0px;
+
+					a{
+						@media #{$small-only}{
+							// @include button(rem-calc(10));
+							color: #FFF;
+						}
+					}
+				}
+
+				li:first-child{
+					@media #{$small-only}{
+						@include grid-column(12);
+						padding: 0px;
 					}
 				}
 			}
+		}
 
-			li:first-child{
-				@media #{$small-only}{
-					@include grid-column(12);
-					padding: 0px;
-				}
-			}
+		li:first-child{
+			margin-left: 0px;
 		}
 	}
-
-	li:first-child{
-		margin-left: 0px;
-	}
-
 }
 /*end quicklinks*/
 
@@ -335,6 +384,10 @@ $include-html-classes: false;
 		dd{
 			a{
 				font-size: 0.7em;
+
+				@media all and (min-width: 768px) and (max-width: 820px){
+					padding-left: rem-calc(5);
+				}
 
 				@media #{$medium-up}{
 					padding-right: 0px;
